force-app/main/default/objects/Card_Spend__c/Card_Spend__c.object-meta.xml
<CustomObject>
    <description>Utilized to house card spend data for Commercial card customers</description>
    <label>Card Spend</label>
    <nameField>
        <displayFormat>CS{0000000000}</displayFormat>
        <label>Card Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Spends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>