force-app/main/default/objects/Card_Spend__c/fields/Active_Cards__c.field-meta.xml
<CustomField>
    <fullName>Active_Cards__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Cards</label>
    <length>10</length>
    <type>Text</type>
</CustomField>