force-app/main/default/objects/Card_Spend__c/fields/Company_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Company_Credit_Limit__c</fullName>
    <label>Company_Credit_Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>