force-app/main/default/objects/Card_Spend__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>