force-app/main/default/objects/Card_Spend__c/fields/Day_End__c.field-meta.xml
<CustomField>
    <fullName>Day_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Day End</label>
    <type>Date</type>
</CustomField>