force-app/main/default/objects/Card_Spend__c/fields/Day_Spend__c.field-meta.xml
<CustomField>
    <fullName>Day_Spend__c</fullName>
    <label>Day Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>