force-app/main/default/objects/Card_Spend__c/fields/Live_Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Live_Account_Count__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Live Account Count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>