force-app/main/default/objects/Card_Spend__c/fields/Managed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Managed_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Managed Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>