force-app/main/default/objects/Card_Spend__c/fields/Month_End__c.field-meta.xml
<CustomField>
    <fullName>Month_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month_End</label>
    <type>Date</type>
</CustomField>