force-app/main/default/objects/Card_Spend__c/fields/Month_Spend__c.field-meta.xml
<CustomField>
    <fullName>Month_Spend__c</fullName>
    <label>Month_Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>