force-app/main/default/objects/Card_Spend__c/fields/Multiple_Product_Flag__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Product_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Multiple Product Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>