force-app/main/default/objects/Card_Spend__c/fields/Partnering_Bank__c.field-meta.xml
<CustomField>
    <fullName>Partnering_Bank__c</fullName>
    <description>SuperBank from the TBS system interface file for Card Spend</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partnering Bank</label>
    <length>120</length>
    <type>Text</type>
</CustomField>