force-app/main/default/objects/Card_Spend__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Card Product Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>