force-app/main/default/objects/Card_Spend__c/fields/System_of_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>System_of_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>System of Record Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>